force-app/main/default/objects/Account/fields/Require_24_Hour_Notification__c.field-meta.xml
<CustomField>
    <fullName>Require_24_Hour_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to indicate if the customer requires a 24 hour notification email to be sent before a Service Appointment is Dispatched. If not checked no such notification would be sent.</inlineHelpText>
    <label>Require 24 Hour Notification</label>
    <type>Checkbox</type>
</CustomField>