force-app/main/default/objects/Account/fields/Require_Service_Reports__c.field-meta.xml
<CustomField>
    <fullName>Require_Service_Reports__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Service Reports</label>
    <type>Checkbox</type>
</CustomField>