force-app/main/default/objects/Account/fields/Resource_Preference_MapAnything__c.field-meta.xml
<CustomField>
    <fullName>Resource_Preference_MapAnything__c</fullName>
    <label>Resource Preference MapAnything</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>[None]</fullName>
            </value>
            <value>
                <fullName>Adam Shima</fullName>
            </value>
            <value>
                <fullName>Alex Ana</fullName>
            </value>
            <value>
                <fullName>Alexander De Gorio</fullName>
            </value>
            <value>
                <fullName>Alex Hsueh</fullName>
            </value>
            <value>
                <fullName>Alex Salogaev</fullName>
            </value>
            <value>
                <fullName>Ali Ebadi</fullName>
            </value>
            <value>
                <fullName>Andres Combariza</fullName>
            </value>
            <value>
                <fullName>Andrew Kryshka</fullName>
            </value>
            <value>
                <fullName>Angela Neatby</fullName>
            </value>
            <value>
                <fullName>Angeline Soundy</fullName>
            </value>
            <value>
                <fullName>Angelo Panibio</fullName>
            </value>
            <value>
                <fullName>April Bos</fullName>
            </value>
            <value>
                <fullName>Arlene Mcphee</fullName>
            </value>
            <value>
                <fullName>Ashfaq Ahmad</fullName>
            </value>
            <value>
                <fullName>Austin Thomas</fullName>
            </value>
            <value>
                <fullName>Barry Woodall</fullName>
            </value>
            <value>
                <fullName>Basil Killisli</fullName>
            </value>
            <value>
                <fullName>Bernard Laberge</fullName>
            </value>
            <value>
                <fullName>Bing Kang Liu</fullName>
            </value>
            <value>
                <fullName>Bjarne Hille</fullName>
            </value>
            <value>
                <fullName>Brad Hill</fullName>
            </value>
            <value>
                <fullName>Brandon Gusso</fullName>
            </value>
            <value>
                <fullName>Camila Rodriguez</fullName>
            </value>
            <value>
                <fullName>Carla Cordeiro</fullName>
            </value>
            <value>
                <fullName>Carla Leigh</fullName>
            </value>
            <value>
                <fullName>Carl Pisang</fullName>
            </value>
            <value>
                <fullName>Chandresh Patel</fullName>
            </value>
            <value>
                <fullName>Chantelle Redman</fullName>
            </value>
            <value>
                <fullName>Christopher Friesen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>