force-app/main/default/objects/Account/fields/ringdna100__Last_Outbound_Call__c.field-meta.xml
<CustomField>
    <fullName>ringdna100__Last_Outbound_Call__c</fullName>
    <label>Last Outbound Call</label>
    <type>DateTime</type>
</CustomField>