force-app/main/default/objects/Account/fields/Sales_Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Sales_Pricebook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Pricebook</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>