force-app/main/default/objects/Account/fields/Sales_Project_Flag__c.field-meta.xml
<CustomField>
    <fullName>Sales_Project_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Project Flag</label>
    <type>Checkbox</type>
</CustomField>