force-app/main/default/objects/Account/fields/Sales_Project_Value_1__c.field-meta.xml
<CustomField>
    <fullName>Sales_Project_Value_1__c</fullName>
    <description>Currently stores a static &apos;ANNUAL REVENUE PER STOP CALCULATIONS ARR PER SERVICE STOP&apos; value from Looker for Accounts where &quot;Sales Project Flag = True&quot;</description>
    <inlineHelpText>Currently stores a static &apos;ANNUAL REVENUE PER STOP CALCULATIONS ARR PER SERVICE STOP&apos; value from Looker for Accounts where &quot;Sales Project Flag = True&quot;</inlineHelpText>
    <label>Sales Project Value 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>