force-app/main/default/objects/Account/fields/Sales_Territory__c.field-meta.xml
<CustomField>
    <fullName>Sales_Territory__c</fullName>
    <formula>FSA_Mapping__r.Sales_Territory__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Territory</label>
    <type>Text</type>
</CustomField>