force-app/main/default/objects/Account/fields/Sales_Territory_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Territory_Rep__c</fullName>
    <formula>FSA_Mapping__r.Sales_Territory__r.Assigned_Sales_Representative__r.FirstName &amp; &quot; &quot; &amp;FSA_Mapping__r.Sales_Territory__r.Assigned_Sales_Representative__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Territory Rep</label>
    <type>Text</type>
</CustomField>