force-app/main/default/objects/Account/fields/SalesPerson_Name__c.field-meta.xml
<CustomField>
    <fullName>SalesPerson_Name__c</fullName>
    <label>SalesPerson Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>