force-app/main/default/objects/Account/fields/SalesPricebookId__c.field-meta.xml
<CustomField>
    <fullName>SalesPricebookId__c</fullName>
    <formula>BLANKVALUE( Sales_Pricebook__c,  $Setup.Field_Service_Settings__c.Default_Opportunity_Price_Book_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Pricebook Id</label>
    <type>Text</type>
</CustomField>