force-app/main/default/objects/Account/fields/Send_Invoice_with_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Send_Invoice_with_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Invoice with Delivery</label>
    <type>Checkbox</type>
</CustomField>