force-app/main/default/objects/Account/fields/Service_Types__c.field-meta.xml
<CustomField>
    <fullName>Service_Types__c</fullName>
    <description>Mapping of associated active Order&apos;s Service Types values retrieved and updated via Apex scheduled jobs.</description>
    <label>Service Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Anti Splash</fullName>
            </value>
            <value>
                <fullName>Apron/Bar Rentals</fullName>
            </value>
            <value>
                <fullName>AromaAire</fullName>
            </value>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>Bird Work</fullName>
            </value>
            <value>
                <fullName>Chemical Dispenser</fullName>
            </value>
            <value>
                <fullName>Diaper</fullName>
            </value>
            <value>
                <fullName>Disposal Exchange</fullName>
            </value>
            <value>
                <fullName>Disposal Onsite</fullName>
            </value>
            <value>
                <fullName>EcoClean</fullName>
            </value>
            <value>
                <fullName>EcoFresh</fullName>
            </value>
            <value>
                <fullName>First Aid/AED</fullName>
            </value>
            <value>
                <fullName>Fly Light</fullName>
            </value>
            <value>
                <fullName>FreshAire</fullName>
            </value>
            <value>
                <fullName>Kaivac - STI</fullName>
            </value>
            <value>
                <fullName>Mat Rentals</fullName>
            </value>
            <value>
                <fullName>Pest</fullName>
            </value>
            <value>
                <fullName>Pest Special</fullName>
            </value>
            <value>
                <fullName>Rental Mop</fullName>
            </value>
            <value>
                <fullName>SaniClean</fullName>
            </value>
            <value>
                <fullName>Sani - Fixture Cleaning</fullName>
            </value>
            <value>
                <fullName>Sani Restore</fullName>
            </value>
            <value>
                <fullName>Service Charges</fullName>
            </value>
            <value>
                <fullName>Soap</fullName>
            </value>
            <value>
                <fullName>Toilet Seat Sanitizer</fullName>
            </value>
            <value>
                <fullName>Vending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>