force-app/main/default/objects/Account/fields/ServicePricebookId__c.field-meta.xml
<CustomField>
    <fullName>ServicePricebookId__c</fullName>
    <formula>BLANKVALUE(  Service_Pricebook__c ,  $Setup.Field_Service_Settings__c.Default_Order_Price_Book_ID__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Pricebook Id</label>
    <type>Text</type>
</CustomField>