force-app/main/default/objects/Account/fields/Ship_Complete__c.field-meta.xml
<CustomField>
    <fullName>Ship_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Business user will need to be able to identify the partial or completed delivery request for each individual SF Order and the change made to the partial delivery flag will not impact the original option chosen by customer.</description>
    <inlineHelpText>This is to flag if customer agreed for partial delivery</inlineHelpText>
    <label>Ship Complete</label>
    <type>Checkbox</type>
</CustomField>