force-app/main/default/objects/Account/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <formula>ShippingStreet &amp; &quot; &quot; &amp; ShippingCity &amp; &quot; &quot; &amp;  ShippingState &amp; &quot; &quot; &amp;  ShippingPostalCode &amp; &quot; &quot; &amp;  ShippingCountry</formula>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>