force-app/main/default/objects/Account/fields/Shipping_Attention__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Attention__c</fullName>
    <label>Shipping Attention</label>
    <length>50</length>
    <type>Text</type>
</CustomField>