force-app/main/default/objects/Account/fields/Shipping_Suite_Number__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Suite_Number__c</fullName>
    <label>Shipping Suite Number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>