force-app/main/default/objects/Account/fields/Unallocated_Assets__c.field-meta.xml
<CustomField>
    <fullName>Unallocated_Assets__c</fullName>
    <formula>HYPERLINK(&quot;/one/one.app?source=alohaHeader#/sObject/00Of1000004Q0CNEA0/view?fv1=&quot; &amp;  Account_ID_Casesafe__c, &quot;Open Report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report: Unallocated Assets</label>
    <type>Text</type>
</CustomField>