force-app/main/default/objects/Account/fields/VMI__c.field-meta.xml
<CustomField>
    <fullName>VMI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VMI</label>
    <type>Checkbox</type>
</CustomField>