force-app/main/default/objects/Account/fields/Washrooms__c.field-meta.xml
<CustomField>
    <fullName>Washrooms__c</fullName>
    <label># Washrooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>