force-app/main/default/objects/Account/fields/YTD_Delta__c.field-meta.xml
<CustomField>
    <fullName>YTD_Delta__c</fullName>
    <formula>Current_Year_To_Date_Sales__c -  Previous_Year_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Delta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>