force-app/main/default/objects/Account/fields/YTD_DeltaPercent__c.field-meta.xml
<CustomField>
    <fullName>YTD_DeltaPercent__c</fullName>
    <formula>IF(  ISBLANK(Current_Year_To_Date_Sales__c), 0.0, YTD_Delta__c /  Current_Year_To_Date_Sales__c)</formula>
    <label>YTD Delta %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>