force-app/main/default/objects/Account/recordTypes/Customer_Bill_To.recordType-meta.xml
<RecordType>
    <fullName>Customer_Bill_To</fullName>
    <active>true</active>
    <label>Customer Bill To</label>
</RecordType>