force-app/main/default/objects/Account/recordTypes/FSL_Internal_Account.recordType-meta.xml
<RecordType>
    <fullName>FSL_Internal_Account</fullName>
    <active>true</active>
    <description>Used for internal</description>
    <label>FSL Internal Account</label>
</RecordType>