force-app/main/default/objects/Account/validationRules/AccPac_AP_Contact_Phone_30_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>AccPac_AP_Contact_Phone_30_Characters</fullName>
    <active>true</active>
    <description>Cannot have more than 30 Characters on A/P Contact Phone Number when inserting into AccPac.</description>
    <errorConditionFormula>AND( Is_Bill_To__c, LEN(A_P_Contact_Phone_Number__c) &gt; 30)</errorConditionFormula>
    <errorDisplayField>A_P_Contact_Phone_Number__c</errorDisplayField>
    <errorMessage>A/P Contact Phone Number cannot contain more than 30 Characters.</errorMessage>
</ValidationRule>