force-app/main/default/objects/Account/validationRules/AccPac_Fax_30_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>AccPac_Fax_30_Characters</fullName>
    <active>true</active>
    <description>Cannot have more than 30 Characters on Fax when inserting into AccPac.</description>
    <errorConditionFormula>LEN(Fax) &gt; 30</errorConditionFormula>
    <errorDisplayField>Fax</errorDisplayField>
    <errorMessage>Fax cannot contain more than 30 Characters.</errorMessage>
</ValidationRule>