force-app/main/default/objects/Account/validationRules/AccPac_InvoicingEmailAddr_50_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>AccPac_InvoicingEmailAddr_50_Characters</fullName>
    <active>true</active>
    <description>Cannot have more than 50 Characters on Invoicing Email Address when inserting into AccPac.</description>
    <errorConditionFormula>Is_Bill_To__c &amp;&amp; LEN(Invoicing_Email_Address__c) &gt; 50</errorConditionFormula>
    <errorDisplayField>Invoicing_Email_Address__c</errorDisplayField>
    <errorMessage>Invoicing Email Address cannot contain more than 50 Characters.</errorMessage>
</ValidationRule>