force-app/main/default/objects/Account/validationRules/AccPac_Website_100_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>AccPac_Website_100_Characters</fullName>
    <active>true</active>
    <description>Cannot have more than 100 Characters on Website when inserting into AccPac.</description>
    <errorConditionFormula>LEN(Website) &gt; 100</errorConditionFormula>
    <errorDisplayField>Website</errorDisplayField>
    <errorMessage>Website cannot contain more than 100 Characters.</errorMessage>
</ValidationRule>