force-app/main/default/objects/Account/validationRules/Bill_To_AccPac_Cannot_Have_Parent.validationRule-meta.xml
<ValidationRule>
    <fullName>Bill_To_AccPac_Cannot_Have_Parent</fullName>
    <active>true</active>
    <description>If I don&apos;t have a dash, I must be a billto and I must have NOT a parent:
If AccPac Number is not blank AND NOT (CONTAINS(AccPac_Account__c, &quot;-&quot;) AND Parent Account = Blank</description>
    <errorConditionFormula>AND(NOT(ISBLANK(AccPac_Account__c )), NOT(CONTAINS(AccPac_Account__c, &apos;-&apos;)), NOT(ISBLANK(ParentId)))</errorConditionFormula>
    <errorDisplayField>ParentId</errorDisplayField>
    <errorMessage>Based on the AccPac number, this appears to be a Bill To Account. A Bill To Account cannot have a parent Account.</errorMessage>
</ValidationRule>