force-app/main/default/objects/Account/validationRules/Bill_To_Record_Type_Cannot_Have_Parent.validationRule-meta.xml
<ValidationRule>
    <fullName>Bill_To_Record_Type_Cannot_Have_Parent</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.Name = &apos;Customer Bill To&apos;, NOT(ISBLANK(ParentId)))</errorConditionFormula>
    <errorDisplayField>ParentId</errorDisplayField>
    <errorMessage>Based on the record type, this appears to be a Bill To Account. A Bill To Account cannot have a parent Account.</errorMessage>
</ValidationRule>