force-app/main/default/objects/Account/validationRules/Billing_Country_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Country_Required</fullName>
    <active>true</active>
    <description>Billing Country Required</description>
    <errorConditionFormula>(RecordType.Name = &apos;Prospect&apos; ||  RecordType.Name = &apos;Customer Bill To&apos;) &amp;&amp;  ISBLANK(BillingCountry )&amp;&amp; CASESAFEID($User.ProfileId) &lt;&gt; $Setup.Field_Service_Settings__c.Integration_User_Profile__c</errorConditionFormula>
    <errorDisplayField>BillingCountry</errorDisplayField>
    <errorMessage>Billing Country Is Required when creating this Account.</errorMessage>
</ValidationRule>