force-app/main/default/objects/Account/validationRules/Mandatory_Invoice_Preference.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Invoice_Preference</fullName>
    <active>true</active>
    <description>Customers require an Invoice Preference</description>
    <errorConditionFormula>AND( Is_Bill_To__c, ISBLANK(TEXT( Invoice_Preference__c )) , ISPICKVAL( Type , &quot;Customer&quot;), CASESAFEID($User.ProfileId) &lt;&gt; $Setup.Field_Service_Settings__c.Integration_User_Profile__c )</errorConditionFormula>
    <errorDisplayField>Invoice_Preference__c</errorDisplayField>
    <errorMessage>Invoice Preference is required for customers</errorMessage>
</ValidationRule>