force-app/main/default/objects/Account/validationRules/Other_Comp_required_Notes.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Comp_required_Notes</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( Competitors__c , &quot;Other&quot;) &amp;&amp; ISBLANK( Other_Competitor_Notes__c )</errorConditionFormula>
    <errorDisplayField>Other_Competitor_Notes__c</errorDisplayField>
    <errorMessage>Additional notes required when Competitors is marked at &quot;Other&quot;</errorMessage>
</ValidationRule>